WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
258093
Fix use-after-move of playerView in VideoFullscreenManagerProxy::createViewWithID()
https://bugs.webkit.org/show_bug.cgi?id=258093
Summary
Fix use-after-move of playerView in VideoFullscreenManagerProxy::createViewWi...
David Kilzer (:ddkilzer)
Reported
2023-06-14 14:28:59 PDT
Fix use-after-move of playerView in WebKit::VideoFullscreenManagerProxy::createViewWithID(). Regressed with: Eliminate double layer hosting of video content when UI-Side compositing is enabled <
https://bugs.webkit.org/show_bug.cgi?id=252021
> <
rdar://105246033
> <
https://commits.webkit.org/260575@main
>
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2023-06-14 14:29:26 PDT
<
rdar://problem/110799152
>
David Kilzer (:ddkilzer)
Comment 2
2023-06-14 14:41:02 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/14973
EWS
Comment 3
2023-06-15 05:04:54 PDT
Committed
265193@main
(809270197668): <
https://commits.webkit.org/265193@main
> Reviewed commits have been landed. Closing PR #14973 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug