Fix use-after-move of playerView in VideoFullscreenManagerProxy::createViewWithID() https://bugs.webkit.org/show_bug.cgi?id=258093 <rdar://110799152>

Reviewed by Chris Dumez.

Stop using WTFMove() on RetainPtr<> to fix the bug.

* Source/WebKit/UIProcess/Cocoa/VideoFullscreenManagerProxy.mm:
(WebKit::VideoFullscreenManagerProxy::createLayerWithID):
- Whitespace change to match code structure in createViewWithID().
(WebKit::VideoFullscreenManagerProxy::createViewWithID):
- Stop using WTFMove(playerView) when calling setPlayerView() to fix the
  use-after-move.
- Make playerLayer a RetainPtr<> variable and use WTFMove(playerLayer)
  when calling setPlayerLayer() to make it match ARC lifetime and avoid
  ref count churn.

Canonical link: https://commits.webkit.org/265193@main